--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-    <form action="/register" method="post">
-        <div>
-            <label for="user-name">Имя: </label>
-            <input type="text" name="user-name" id="user-name", placeholder="Имя">
-        </div>
-        <div>
-            <label for="password">Пароль: </label>
-            <input type="text" name="password" id="password", placeholder="Пароль">
-        </div>
-        <input type="submit" value="Отправить">
-    </form>
+    <div class="register-form">
+        <form action="/register" method="post">
+            <div>
+                <label for="login">Логин: </label>
+                <input type="text" name="login" id="login", placeholder="Логин">
+            </div>
+            <div>
+                <label for="password">Пароль: </label>
+                <input type="password" name="password" id="password", placeholder="Пароль">
+            </div>
+            <div>
+                <label for="username">Имя: </label>
+                <input type="text" name="username" id="username", placeholder="Имя">
+            </div>
+            <input type="submit" value="Отправить">
+        </form>
+    </div>
 {% endblock %}
