оформление + логин и автор странницы

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-    <div>Добро пожаловать на сайт с животными и растениями!</div>
+    <div class="welcome-title">Добро пожаловать на сайт с животными и растениями!</div>
     <div class="container">
         <div class="side">
             <h1>Навигация</h1>
